--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Coucou c'est moi</h1>
-    <h2>Hellooo</h2>
-    <h3>bonjour</h3>
+    <header>
+        <h1>Ohmyfood</h1>
+    </header>
 </body>
 </html>
