first part of sass structure

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./public/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Ohmyfood</h1>
+    <header class="header">
+        <div class="header_logo">
+            <img src="./public/images/ohmyfood@2x.svg" alt="Logo OhMyFood">
+        </div>
+        <div class="header_localization">
+            <i class="fas fa-map-marker-alt"></i>
+            <p>Paris, Belleville</p>
+        </div>
     </header>
+    <script src="https://kit.fontawesome.com/eca88c3d0a.js" crossorigin="anonymous"></script>
 </body>
 </html>
