--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             <p>Paris, Belleville</p>
         </div>
     </header>
+
+    <section class="intro">
+        <h2>Réservez le menu qui vous convient</h2>
+        <p class="intro_subtitle">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+        <div class="intro-button">
+        <button class="intro_button">Explorer nos restaurants</button>
+    </div>
+    </section>
     <script src="https://kit.fontawesome.com/eca88c3d0a.js" crossorigin="anonymous"></script>
 </body>
 </html>
