Final version home page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./public/css/style.css">
     <title>Ohmyfood</title>
 </head>
+
 <body>
     <header class="header">
         <div class="header_logo">
@@ -21,10 +23,110 @@
     <section class="intro">
         <h2>Réservez le menu qui vous convient</h2>
         <p class="intro_subtitle">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        <div class="intro-button">
-        <button class="intro_button">Explorer nos restaurants</button>
-    </div>
+        <div class="intro_main">
+            <button class="intro_main_button">Explorer nos restaurants</button>
+        </div>
     </section>
     <script src="https://kit.fontawesome.com/eca88c3d0a.js" crossorigin="anonymous"></script>
+
+    <section class="step">
+        <h3 class="step_title">Fonctionnement</h3>
+        <ol>
+            <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+            <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
+            <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
+        </ol>
+    </section>
+
+    <section class="cards">
+        <h3>Restaurants</h3>
+        <div class="cards_list new">
+            <a href="#" class="cards_list_restaurant">
+                <div>
+                    <img class="cards_list_restaurant_image" src="/public/images/palette-du-gout.jpg"
+                        alt="la palette du goût">
+                </div>
+
+                <div class="cards_list_restaurant_description">
+                    <div class="cards_list_restaurant_description_title">
+                        <h4>La palette du goût</h4>
+                        <span class="p_description"><p>Ménilmontant</p></span> 
+                    </div>
+                    <div class="cards_list_restaurant_description_heart">
+                        <i class="far fa-heart"></i>
+                    </div>
+
+                </div>
+            </a>
+
+            <a href="#" class="cards_list_restaurant new">
+                <div>
+                    <img class="cards_list_restaurant_image" src="/public/images/note-enchantée.jpg"
+                        alt="la note enchantée">
+                </div>
+                <div class="cards_list_restaurant_description">
+                    <div class="cards_list_restaurant_description_title">
+                        <h4>La note enchantée</h4>
+                        <span class="p_description"><p>Charonne</p></span>
+                    </div>
+                    <div class="cards_list_restaurant_description_heart">
+                        <i class="far fa-heart"></i>
+                    </div>
+
+                </div>
+            </a>
+
+            <a href="#" class="cards_list_restaurant new">
+                <div>
+                    <img class="cards_list_restaurant_image" src="/public/images/a-la-francaise.jpg"
+                        alt="à la française">
+                </div>
+                <div class="cards_list_restaurant_description">
+                    <div class="cards_list_restaurant_description_title">
+                        <h4>A la française</h4>
+                        <span class="p_description"><p>Cité rouge</p></span>
+                    </div>
+                    <div class="cards_list_restaurant_description_heart">
+                        <i class="far fa-heart"></i>
+                    </div>
+
+                </div>
+            </a>
+
+            <a href="#" class="cards_list_restaurant">
+                <div>
+                    <img class="cards_list_restaurant_image" src="/public/images/delice-des-sens.jpg"
+                        alt="le délice des sens">
+                </div>
+                <div class="cards_list_restaurant_description">
+                    <div class="cards_list_restaurant_description_title">
+                        <h4>Le délice des sens</h4>
+                        <span class="p_description"><p>Folie-Méricourt</p></span>
+                    </div>
+                    <div class="cards_list_restaurant_description_heart">
+                        <i class="far fa-heart"></i>
+                    </div>
+
+                </div>
+            </a>
+        </div>
+
+    </section>
+
+    <footer>
+        <h2>ohmyfood</h2>
+        <p>
+            <i class="fas fa-utensils"></i>
+            Proposer un restaurant
+        </p>
+        <p>
+            <i class="fas fa-hands-helping"></i>
+            Devenir partenaire
+        </p>
+        <p>Mentions légales</p>
+        <a href="mailto:lydia.bouberka@gmail.com">Contact</a>
+
+    </footer>
 </body>
+
 </html>
