Finalization of restaurant pages

--- a/index.html
+++ b/index.html
@@ -6,10 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/css/style.css">
+    <script src="https://kit.fontawesome.com/eca88c3d0a.js" crossorigin="anonymous"></script>
     <title>Ohmyfood</title>
 </head>
 
 <body>
+
+    <!--<div class="show-loader">
+        <div class="ajax-flipper-overlay"></div>
+        <div class="ajax-flipper-container">
+      <div class="ajax-flipper flip-animation"><img src="./public/images/ohmyfood@2x.svg" class="ajax-flip-img"></div>
+      <div class="ajax-flipper overlap-flip-animation"><img src="./public/images/ohmyfood@2x.svg" class="ajax-flip-img rotate-180-y"></div>
+    </div>
+    </div>-->
+
+    <div class="loader">
+        <div class="loader_ajax-flipper_overlay"></div>
+        <div class="loader_ajax-flipper_container">
+            <div class="ajax-flipper loader_ajax-flipper_container_flip-animation">
+                <img src="./public/images/ohmyfood@2x.svg" class="ajax-flip-img">
+            </div>
+            <div class="ajax-flipper loader_ajax-flipper_container_overlap-flip-animation">
+                <img src="./public/images/ohmyfood@2x.svg" class="ajax-flip-img rotate-180-y">
+            </div>
+        </div>
+    </div>    
+
     <header class="header">
         <div class="header_logo">
             <img src="./public/images/ohmyfood@2x.svg" alt="Logo OhMyFood">
@@ -27,7 +49,7 @@
             <button class="intro_main_button">Explorer nos restaurants</button>
         </div>
     </section>
-    <script src="https://kit.fontawesome.com/eca88c3d0a.js" crossorigin="anonymous"></script>
+
 
     <section class="step">
         <h3 class="step_title">Fonctionnement</h3>
@@ -41,7 +63,7 @@
     <section class="cards">
         <h3>Restaurants</h3>
         <div class="cards_list new">
-            <a href="#" class="cards_list_restaurant">
+            <a href="./restau/la_palette_du_gout.html" class="cards_list_restaurant">
                 <div>
                     <img class="cards_list_restaurant_image" src="/public/images/palette-du-gout.jpg"
                         alt="la palette du goût">
@@ -50,7 +72,9 @@
                 <div class="cards_list_restaurant_description">
                     <div class="cards_list_restaurant_description_title">
                         <h4>La palette du goût</h4>
-                        <span class="p_description"><p>Ménilmontant</p></span> 
+                        <span class="p_description">
+                            <p>Ménilmontant</p>
+                        </span>
                     </div>
                     <div class="cards_list_restaurant_description_heart">
                         <i class="far fa-heart"></i>
@@ -59,7 +83,7 @@
                 </div>
             </a>
 
-            <a href="#" class="cards_list_restaurant new">
+            <a href="./restau/la_note_enchantee.html" class="cards_list_restaurant new">
                 <div>
                     <img class="cards_list_restaurant_image" src="/public/images/note-enchantée.jpg"
                         alt="la note enchantée">
@@ -67,7 +91,9 @@
                 <div class="cards_list_restaurant_description">
                     <div class="cards_list_restaurant_description_title">
                         <h4>La note enchantée</h4>
-                        <span class="p_description"><p>Charonne</p></span>
+                        <span class="p_description">
+                            <p>Charonne</p>
+                        </span>
                     </div>
                     <div class="cards_list_restaurant_description_heart">
                         <i class="far fa-heart"></i>
@@ -76,7 +102,7 @@
                 </div>
             </a>
 
-            <a href="#" class="cards_list_restaurant new">
+            <a href="./restau/a_la_francaise.html" class="cards_list_restaurant new">
                 <div>
                     <img class="cards_list_restaurant_image" src="/public/images/a-la-francaise.jpg"
                         alt="à la française">
@@ -84,7 +110,9 @@
                 <div class="cards_list_restaurant_description">
                     <div class="cards_list_restaurant_description_title">
                         <h4>A la française</h4>
-                        <span class="p_description"><p>Cité rouge</p></span>
+                        <span class="p_description">
+                            <p>Cité rouge</p>
+                        </span>
                     </div>
                     <div class="cards_list_restaurant_description_heart">
                         <i class="far fa-heart"></i>
@@ -93,7 +121,7 @@
                 </div>
             </a>
 
-            <a href="#" class="cards_list_restaurant">
+            <a href="./restau/le_delice_des_sens.html" class="cards_list_restaurant new">
                 <div>
                     <img class="cards_list_restaurant_image" src="/public/images/delice-des-sens.jpg"
                         alt="le délice des sens">
@@ -101,7 +129,9 @@
                 <div class="cards_list_restaurant_description">
                     <div class="cards_list_restaurant_description_title">
                         <h4>Le délice des sens</h4>
-                        <span class="p_description"><p>Folie-Méricourt</p></span>
+                        <span class="p_description">
+                            <p>Folie-Méricourt</p>
+                        </span>
                     </div>
                     <div class="cards_list_restaurant_description_heart">
                         <i class="far fa-heart"></i>
