--- a/restau/la_note_enchantee.html
+++ b/restau/la_note_enchantee.html
@@ -28,7 +28,7 @@
     </header>
 
     <div class="banner">
-        <img src="../public/images/note-enchantee.jpg" alt="la note enchantée">
+        <img src="../public/images/note-enchantee.jpg" alt="note enchantée">
     </div>
 
     <div class="main">
