--- a/restau/a_la_francaise.html
+++ b/restau/a_la_francaise.html
@@ -25,7 +25,7 @@
     </header>
 
     <div class="banner">
-        <img src="../public/images/a-la-francaise.jpg" alt="A la française">
+        <img src="../public/images/a-la-francaise.jpg" alt="a la française">
     </div>
 
     <div class="main">
