--- a/restau/le_delice_des_sens.html
+++ b/restau/le_delice_des_sens.html
@@ -30,7 +30,7 @@
     </header>
 
     <div class="banner">
-        <img src="../public/images/delice-des-sens.jpg" alt="le délice des sens">
+        <img src="../public/images/delice-des-sens.jpg" alt="delice des sens">
     </div>
 
     <div class="main">
