--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <a href="./restau/la_note_enchantee.html" class="cards_list_restaurant new">
                 <div>
-                    <img class="cards_list_restaurant_image" src="/public/images/note-enchantee.jpg"
+                    <img class="cards_list_restaurant_image" src="./public/images/note-enchantee.jpg"
                         alt="la note enchantée">
                 </div>
                 <div class="cards_list_restaurant_description">
@@ -86,7 +86,7 @@
 
             <a href="./restau/a_la_francaise.html" class="cards_list_restaurant new">
                 <div>
-                    <img class="cards_list_restaurant_image" src="/public/images/a-la-francaise.jpg"
+                    <img class="cards_list_restaurant_image" src="./public/images/a-la-francaise.jpg"
                         alt="à la française">
                 </div>
                 <div class="cards_list_restaurant_description">
@@ -105,7 +105,7 @@
 
             <a href="./restau/le_delice_des_sens.html" class="cards_list_restaurant new">
                 <div>
-                    <img class="cards_list_restaurant_image" src="/public/images/delice-des-sens.jpg"
+                    <img class="cards_list_restaurant_image" src="./public/images/delice-des-sens.jpg"
                         alt="le délice des sens">
                 </div>
                 <div class="cards_list_restaurant_description">
