last final update

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
             </a>
 
-            <a href="./restau/a_la_francaise.html" class="cards_list_restaurant new">
+            <a href="./restau/a_la_francaise.html" class="cards_list_restaurant">
                 <div>
                     <img class="cards_list_restaurant_image" src="./public/images/a-la-francaise.jpg"
                         alt="à la française">
@@ -103,7 +103,7 @@
                 </div>
             </a>
 
-            <a href="./restau/le_delice_des_sens.html" class="cards_list_restaurant new">
+            <a href="./restau/le_delice_des_sens.html" class="cards_list_restaurant">
                 <div>
                     <img class="cards_list_restaurant_image" src="./public/images/delice-des-sens.jpg"
                         alt="le délice des sens">
